tests/baselines/reference/noCollisionThisExpressionAndLocalVarInAccessors(strict=true).errors.txt
noCollisionThisExpressionAndLocalVarInAccessors.ts(4,23): error TS7006: Parameter 'callback' implicitly has an 'any' type.
noCollisionThisExpressionAndLocalVarInAccessors.ts(14,23): error TS7006: Parameter 'callback' implicitly has an 'any' type.
noCollisionThisExpressionAndLocalVarInAccessors.ts(27,23): error TS7006: Parameter 'callback' implicitly has an 'any' type.
noCollisionThisExpressionAndLocalVarInAccessors.ts(37,23): error TS7006: Parameter 'callback' implicitly has an 'any' type.


==== noCollisionThisExpressionAndLocalVarInAccessors.ts (4 errors) ====
    class class1 {
        get a(): number {
            var x2 = {
                doStuff: (callback) => () => {
                          ~~~~~~~~
!!! error TS7006: Parameter 'callback' implicitly has an 'any' type.
                    var _this = 2;
                    return callback(_this);
                }
            }
    
            return 10;
        }
        set a(val: number) {
            var x2 = {
                doStuff: (callback) => () => {
                          ~~~~~~~~
!!! error TS7006: Parameter 'callback' implicitly has an 'any' type.
                    var _this = 2;
                    return callback(_this);
                }
            }
    
        }
    }
    
    class class2 {
        get a(): number {
            var _this = 2;
            var x2 = {
                doStuff: (callback) => () => {
                          ~~~~~~~~
!!! error TS7006: Parameter 'callback' implicitly has an 'any' type.
                    return callback(_this);
                }
            }
    
            return 10;
        }
        set a(val: number) {
            var _this = 2;
            var x2 = {
                doStuff: (callback) => () => {
                          ~~~~~~~~
!!! error TS7006: Parameter 'callback' implicitly has an 'any' type.
                    return callback(_this);
                }
            }
    
        }
    }